kubernetes/service/yaml/simpleweb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simpleweb-pod
  labels:
    app: simpleweb
spec:
  containers:
  - name: simpleweb
    image: codelieche/simpleweb:v2
    ports:
    - containerPort: 8080
      protocol: TCP
