kubernetes/service/yaml/simpleweb-service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleweb
spec:
  type: LoadBalancer   # Service类型，默认是：ClusterIP
  selector:            # 选择器
    app: simpleweb     # 具有app=simpleweb标签的pod都属于该服务
  ports:
  - port: 80           # 监听的端口
    targetPort: 8080   # Pod监听的端口
