kubernetes/service/yaml/simpleweb-service-nodeport.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: simpleweb
spec:
  type: NodePort       # Service类型，默认是：ClusterIP
  selector:            # 选择器
    app: simpleweb     # 具有app=simpleweb标签的pod都属于该服务
  ports:
  - port: 80           # ClusterIP上监听的端口
    targetPort: 8080   # Pod监听的端口
    # nodePort: 30030  # 各节点上监听的端口，可不填，会随机生成
